1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Schedule.h: New method at:createFAction: which creates a FAction
	from a FCall instance.
	New method createFAction: which calls at:createFAction:

	* Schedule.m ([Schedule_c -at:createFAction:]): New method.
	([Schedule_c -createFAction:]): New method.

	* Action.h: New class FAction that performs a foreign function call
	through FCall class.

	* Action.m: New class FAction.

	* ActionGroup.h: New method createFAction: which creates a FAction
	that performs a foreign function call.

	* ActionGroup.m ([ActionGroup_c -createFAction:]): New method.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am: Revert last change.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (INCLUDES): Add JAVAINCLUDES to INCLUDES variable.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* CompoundAction.m ([CompoundAction_c -_createActivity_:::]): Use 
	setActivity: in non-Randomized case.

	* ActionGroup.[hm] ([GroupIndex_c -setActivity:]): New method.

	* Schedule.[hm] ([ScheduleIndex_c -setActivity:]): New method.

1999-03-05  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* XActivity.m (Activity_c): Add phase tags.

	* XActivity.h (Activity_c): Implement Activity protocol.

	* ActionGroup.[hm] ([GroupPermutedIndex_c +createBegin:],
	[GroupPermutedIndex_c -setCollection:], 
	[GroupPermutedIndex_c -createEnd]): Remove.
	([GroupPermutedIndex_c -setActivity:]): New setter.
	([ActionGroup_c -_createPermutedIndex_:activity:]): Add activity:
	argument, which sets activity slot in index. Use previous method.

	* CompoundAction.m ([CompoundAction_c -_createActivity_:::]): 
	Use previous method.

1999-03-04  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* ActionGroup.m (GroupPermutedIndex_c, ForEachIndex_c): Add phase tags.